--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,12 @@
 {
     "HELLO": "hello world",
-    "GREETING": "Nice to meet you"
+    "GREETING": "Nice to meet you",
+    "CHARACTER-LIST": {
+        "OUR STUDENTS AND STAFF": "All our students and staff:"
+    },
+    "CHARACTER": {
+        "NAME": "Name",
+        "FAMOUS TWIN": "Famous twin",
+        "HOUSE": "House"
+    }
 }
