FEAT some changes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,9 @@
     "CHARACTER": {
         "NAME": "Name",
         "FAMOUS TWIN": "Famous twin",
-        "HOUSE": "House"
+        "HOUSE": "House",
+        "GENDER": "Gender",
+        "male": "male",
+        "female": "female"
     }
 }
