--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,7 +7,10 @@
     "CHARACTER": {
         "NAME": "Nombre",
         "FAMOUS TWIN": "Gemelo famoso",
-        "HOUSE": "Casa"
+        "HOUSE": "Casa",
+        "GENDER": "Género",
+        "male": "Másculino",
+        "female": "femenino"
 
     }
 }
