FEAT: adding some styles, and character component ready

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,6 @@
         "FAMOUS TWIN": "Famous twin",
         "HOUSE": "House",
         "GENDER": "Gender",
-        "male": "male",
-        "female": "female"
+        "ALIVE": "Status"
     }
 }
