--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
     "HELLO": "hello world",
     "GREETING": "Nice to meet you",
     "CHARACTER-LIST": {
-        "OUR STUDENTS AND STAFF": "All our students and staff:"
+        "OUR STUDENTS AND STAFF": "All our students and staff"
     },
     "CHARACTER": {
         "NAME": "Name",
