--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,7 +2,7 @@
     "HELLO": "hola mundo",
     "GREETING": "Encantado",
     "CHARACTER-LIST": {
-        "OUR STUDENTS AND STAFF": "Nuestros alumnos y miembros del colegio:"
+        "OUR STUDENTS AND STAFF": "Nuestros alumnos y miembros del colegio"
     },
     "CHARACTER": {
         "NAME": "Nombre",
