FEAT: new route houses

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,8 @@
     "HEADER": {
         "OUR STUDENTS AND STAFF": "All our students and staff",
         "HOME": "Home",
-        "LANGUAGE": "Language"
+        "LANGUAGE": "Language",
+        "HOUSES": "Houses"
     },
     "NOTFOUND": {
         "DANGER": "The page you are trying to access does not exist"
