--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,7 +20,8 @@
         "STUDENTS": "Students",
         "INSCRIPTION STUDENT": "Inscription new student",
         "MY SOONS": "My inscriptions",
-        "LOGIN": "Login"
+        "LOGIN": "Login",
+        "ABOUT": "About"
     },
     "NOTFOUND": {
         "DANGER": "The page you are trying to access does not exist"
@@ -63,5 +64,8 @@
     },
     "LOGIN": {
         "LOGIN": "Login"
+    },
+    "ABOUT": {
+        "Welcome to my application! I have created a kind of recreation of Hogwarts! In which you can see your characters, paged, and filter them, either by name or by house. In addition to seeing the houses, you will be able to see students who apply to enter this prestigious school. And if you log in you can also do it. I hope you like it": "Welcome to my application! I have created a kind of recreation of Hogwarts! In which you can see your characters, paged, and filter them, either by name or by house. In addition to seeing the houses, you will be able to see students who apply to enter this prestigious school. And if you log in you can also do it. I hope you like it."
     }
 }
